--- a/configurations/styles/global.css
+++ b/configurations/styles/global.css
@@ -34,6 +34,9 @@
     --ring: 240 5% 64.9%;
 
     --radius: 0.5rem;
+
+    --font-inter: "Inter", -apple-system, system-ui, BlinkMacSystemFont,
+      "Helvetica Neue", "Helvetica", sans-serif;
   }
 
   .dark {
