--- a/configurations/styles/global.css
+++ b/configurations/styles/global.css
@@ -37,6 +37,142 @@
 
     --font-inter: "Inter", -apple-system, system-ui, BlinkMacSystemFont,
       "Helvetica Neue", "Helvetica", sans-serif;
+
+    --background-color-background: #fcfcfc;
+    --background-color-background-body: #ffffff;
+    --background-color-background-overlay: #00000070;
+    --background-color-background-strong: #f8f8f8;
+    --background-color-background-stronger: #ededed;
+    --background-color-background-strongest: #e2e2e2;
+    --background-color-background-weak: #fcfcfc;
+    --background-destructive-color-background-destructive: #e5484d;
+    --background-destructive-color-background-destructive-strong: #dc3d43;
+    --background-destructive-color-background-destructive-stronger: #cd2b31;
+    --background-destructive-color-background-destructive-strongest: #381316;
+    --background-destructive-color-background-destructive-weak: #eb9091;
+    --background-destructive-color-background-destructive-weaker: #f9c6c6;
+    --background-destructive-color-background-destructive-weakest: #fff8f8;
+    --background-error-color-background-error: #c72323;
+    --background-error-color-background-error-strong: #750c0c;
+    --background-error-color-background-error-stronger: #4a0b0b;
+    --background-error-color-background-error-strongest: #310c0c;
+    --background-error-color-background-error-weakest: #fef5f5;
+    --background-info-color-background-info: #0091ff;
+    --background-info-color-background-info-weakest: #f5faff;
+    --background-inverse-color-background-body-inverse: #171717;
+    --background-inverse-color-background-inverse: #171717;
+    --background-inverse-color-background-inverse-strong: #8f8f8f;
+    --background-inverse-color-background-inverse-stronger: #c7c7c7;
+    --background-primary-color-background-primary: #171717;
+    --background-primary-color-background-primary-strong: #0d0d0d;
+    --background-primary-color-background-primary-stronger: #0d0d0d;
+    --background-primary-color-background-primary-strongest: #0d0d0d;
+    --background-primary-color-background-primary-weak: #6f6f6f;
+    --background-primary-color-background-primary-weaker: #e2e2e2;
+    --background-primary-color-background-primary-weakest: #f8f8f8;
+    --background-success-color-background-success: #30a46c;
+    --background-success-color-background-success-weakest: #e5fbeb;
+    --background-warning-color-background-warning: #f76808;
+    --background-warning-color-background-warning-weakest: #fef8f4;
+    --border-color-border: #ededed;
+    --border-color-border-strong: #c7c7c7;
+    --border-color-border-weak: #f3f3f3;
+    --border-color-border-weaker: #f8f8f8;
+    --border-color-border-weakest: #fcfcfc;
+    --border-destructive-color-border-destructive: #e5484d;
+    --border-destructive-color-border-destructive-strong: #dc3d43;
+    --border-destructive-color-border-destructive-stronger: #cd2b31;
+    --border-destructive-color-border-destructive-strongest: #381316;
+    --border-destructive-color-border-destructive-weak: #eb9091;
+    --border-destructive-color-border-destructive-weaker: #f9c6c6;
+    --border-destructive-color-border-destructive-weakest: #fff8f8;
+    --border-error-color-border-error: #c72323;
+    --border-error-color-border-error-strong: #750c0c;
+    --border-error-color-border-error-stronger: #4a0b0b;
+    --border-error-color-border-error-strongest: #310c0c;
+    --border-error-color-border-error-weak: #f58a8a;
+    --border-error-color-border-error-weaker: #fccfcf;
+    --border-error-color-border-error-weakest: #feecec;
+    --border-info-color-border-info: #0091ff;
+    --border-info-color-border-info-weak: #b7d9f8;
+    --border-info-color-border-info-weaker: #e1f0ff;
+    --border-info-color-border-info-weakest: #f5faff;
+    --border-inverse-color-border-inverse: #8891aa;
+    --border-inverse-color-border-inverse-strong: #e1e3ea;
+    --border-inverse-color-border-inverse-stronger: #f4f4f6;
+    --border-inverse-color-border-inverse-strongest: #ffffff;
+    --border-inverse-color-border-inverse-weaker: #394762;
+    --border-inverse-color-border-inverse-weakest: #121c2d;
+    --border-primary-color-border-primary: #171717;
+    --border-primary-color-border-primary-strong: #171717;
+    --border-primary-color-border-primary-stronger: #171717;
+    --border-primary-color-border-primary-strongest: #000000;
+    --border-primary-color-border-primary-weak: #c7c7c7;
+    --border-primary-color-border-primary-weaker: #ededed;
+    --border-primary-color-border-primary-weakest: #f8f8f8;
+    --border-success-color-border-success: #30a46c;
+    --border-success-color-border-success-weak: #5bb98c;
+    --border-success-color-border-success-weaker: #b4dfc4;
+    --border-success-color-border-success-weakest: #ddf3e4;
+    --border-warning-color-border-warning: #f76808;
+    --border-warning-color-border-warning-weak: #ffcca7;
+    --border-warning-color-border-warning-weaker: #ffe8d7;
+    --border-warning-color-border-warning-weakest: #fef8f4;
+    --data-visualization-color-data-visualization-1: #001489;
+    --data-visualization-color-data-visualization-10: #eb5656;
+    --data-visualization-color-data-visualization-2: #0e7c3a;
+    --data-visualization-color-data-visualization-3: #0d3a1f;
+    --data-visualization-color-data-visualization-4: #008cff;
+    --data-visualization-color-data-visualization-5: #394762;
+    --data-visualization-color-data-visualization-6: #a67fe3;
+    --data-visualization-color-data-visualization-7: #6d2ed1;
+    --data-visualization-color-data-visualization-8: #8891aa;
+    --data-visualization-color-data-visualization-9: #750c0c;
+    --text-color-text: #171717;
+    --text-color-text-weak: #858585;
+    --text-color-text-weaker: #e2e2e2;
+    --text-color-text-weakest: #ededed;
+    --text-destructive-color-text-destructive: #c72323;
+    --text-destructive-color-text-destructive-strong: #ad1111;
+    --text-destructive-color-text-destructive-stronger: #4a0b0b;
+    --text-destructive-color-text-destructive-strongest: #310c0c;
+    --text-destructive-color-text-destructive-weak: #f6b1b1;
+    --text-error-color-text-error: #c72323;
+    --text-error-color-text-error-strong: #750c0c;
+    --text-error-color-text-error-stronger: #4a0b0b;
+    --text-error-color-text-error-strongest: #310c0c;
+    --text-error-color-text-error-weak: #eb5656;
+    --text-icon-color-text-icon: #171717;
+    --text-icon-color-text-icon-error: #c72323;
+    --text-icon-color-text-icon-info: #0081f1;
+    --text-icon-color-text-icon-inverse: #8891aa;
+    --text-icon-color-text-icon-success: #0b602d;
+    --text-icon-color-text-icon-warning: #8d3118;
+    --text-icon-color-text-icon-weaker: #8f8f8f;
+    --text-info-color-text-info: #0081f1;
+    --text-info-color-text-info-strong: #0091ff;
+    --text-inverse-color-text-inverse: #ffffff;
+    --text-inverse-color-text-inverse-weak: #ededed;
+    --text-inverse-color-text-inverse-weaker: #c7c7c7;
+    --text-inverse-color-text-inverse-weakest: #858585;
+    --text-link-color-text-link: #0263e0;
+    --text-link-color-text-link-strong: #001489;
+    --text-link-color-text-link-stronger: #030b5d;
+    --text-link-color-text-link-strongest: #06033a;
+    --text-link-color-text-link-weak: #99cdff;
+    --text-link-destructive-color-text-link-destructive: #c72323;
+    --text-link-destructive-color-text-link-destructive-strong: #ad1111;
+    --text-link-destructive-color-text-link-destructive-stronger: #4a0b0b;
+    --text-link-destructive-color-text-link-destructive-strongest: #310c0c;
+    --text-link-destructive-color-text-link-destructive-weak: #f6b1b1;
+    --text-primary-color-text-primary: #171717;
+    --text-primary-color-text-primary-strong: #001489;
+    --text-primary-color-text-primary-stronger: #030b5d;
+    --text-primary-color-text-primary-strongest: #06033a;
+    --text-primary-color-text-primary-weak: #99cdff;
+    --text-success-color-text-success: #30a46c;
+    --text-warning-color-text-warning: #8d3118;
+    --text-warning-color-text-warning-strong: #8d3118;
   }
 
   .dark {
@@ -68,6 +204,142 @@
     --destructive-foreground: 0 85.7% 97.3%;
 
     --ring: 240 3.7% 15.9%;
+
+    --background-color-background: #161616;
+    --background-color-background-body: #0d0d0d;
+    --background-color-background-overlay: #00000070;
+    --background-color-background-strong: #1c1c1c;
+    --background-color-background-stronger: #282828;
+    --background-color-background-strongest: #343434;
+    --background-color-background-weak: #161616;
+    --background-destructive-color-background-destructive: #e5484d;
+    --background-destructive-color-background-destructive-strong: #f2555a;
+    --background-destructive-color-background-destructive-stronger: #ff6369;
+    --background-destructive-color-background-destructive-strongest: #feecee;
+    --background-destructive-color-background-destructive-weak: #aa2429;
+    --background-destructive-color-background-destructive-weaker: #671e22;
+    --background-destructive-color-background-destructive-weakest: #381316;
+    --background-error-color-background-error: #d61f1f;
+    --background-error-color-background-error-strong: #f58a8a;
+    --background-error-color-background-error-stronger: #fccfcf;
+    --background-error-color-background-error-strongest: #feecec;
+    --background-error-color-background-error-weakest: #121c2d;
+    --background-info-color-background-info: #0091ff;
+    --background-info-color-background-info-weakest: #0f1b2d;
+    --background-inverse-color-background-body-inverse: #161616;
+    --background-inverse-color-background-inverse: #161616;
+    --background-inverse-color-background-inverse-strong: #282828;
+    --background-inverse-color-background-inverse-stronger: #505050;
+    --background-primary-color-background-primary: #ededed;
+    --background-primary-color-background-primary-strong: #a0a0a0;
+    --background-primary-color-background-primary-stronger: #343434;
+    --background-primary-color-background-primary-strongest: #1c1c1c;
+    --background-primary-color-background-primary-weak: #ffffff;
+    --background-primary-color-background-primary-weaker: #ffffff;
+    --background-primary-color-background-primary-weakest: #ffffff;
+    --background-success-color-background-success: #30a46c;
+    --background-success-color-background-success-weakest: #0d1912;
+    --background-warning-color-background-warning: #f76808;
+    --background-warning-color-background-warning-weakest: #2b1400;
+    --border-color-border: #282828;
+    --border-color-border-strong: #505050;
+    --border-color-border-weak: #232323;
+    --border-color-border-weaker: #1c1c1c;
+    --border-color-border-weakest: #161616;
+    --border-destructive-color-border-destructive: #e5484d;
+    --border-destructive-color-border-destructive-strong: #f2555a;
+    --border-destructive-color-border-destructive-stronger: #ff6369;
+    --border-destructive-color-border-destructive-strongest: #feecee;
+    --border-destructive-color-border-destructive-weak: #aa2429;
+    --border-destructive-color-border-destructive-weaker: #671e22;
+    --border-destructive-color-border-destructive-weakest: #291415;
+    --border-error-color-border-error: #d61f1f;
+    --border-error-color-border-error-strong: #f58a8a;
+    --border-error-color-border-error-stronger: #fccfcf;
+    --border-error-color-border-error-strongest: #feecec;
+    --border-error-color-border-error-weak: #ad1111;
+    --border-error-color-border-error-weaker: #ad1111;
+    --border-error-color-border-error-weakest: #310c0c;
+    --border-info-color-border-info: #0091ff;
+    --border-info-color-border-info-weak: #0d3868;
+    --border-info-color-border-info-weaker: #102a4c;
+    --border-info-color-border-info-weakest: #0f1b2d;
+    --border-inverse-color-border-inverse: #8891aa;
+    --border-inverse-color-border-inverse-strong: #e1e3ea;
+    --border-inverse-color-border-inverse-stronger: #f4f4f6;
+    --border-inverse-color-border-inverse-strongest: #ffffff;
+    --border-inverse-color-border-inverse-weaker: #394762;
+    --border-inverse-color-border-inverse-weakest: #121c2d;
+    --border-primary-color-border-primary: #ededed;
+    --border-primary-color-border-primary-strong: #ededed;
+    --border-primary-color-border-primary-stronger: #ededed;
+    --border-primary-color-border-primary-strongest: #ffffff;
+    --border-primary-color-border-primary-weak: #343434;
+    --border-primary-color-border-primary-weaker: #282828;
+    --border-primary-color-border-primary-weakest: #1c1c1c;
+    --border-success-color-border-success: #30a46c;
+    --border-success-color-border-success-weak: #236e4a;
+    --border-success-color-border-success-weaker: #164430;
+    --border-success-color-border-success-weakest: #113123;
+    --border-warning-color-border-warning: #f76808;
+    --border-warning-color-border-warning-weak: #5f2a06;
+    --border-warning-color-border-warning-weaker: #441f04;
+    --border-warning-color-border-warning-weakest: #2b1400;
+    --data-visualization-color-data-visualization-1: #0263e0;
+    --data-visualization-color-data-visualization-10: #e8b407;
+    --data-visualization-color-data-visualization-2: #c8aff0;
+    --data-visualization-color-data-visualization-3: #606b85;
+    --data-visualization-color-data-visualization-4: #66b3ff;
+    --data-visualization-color-data-visualization-5: #0e7c3a;
+    --data-visualization-color-data-visualization-6: #fa9950;
+    --data-visualization-color-data-visualization-7: #c35323;
+    --data-visualization-color-data-visualization-8: #f6b1b1;
+    --data-visualization-color-data-visualization-9: #8c5bd8;
+    --text-color-text: #ededed;
+    --text-color-text-weak: #7e7e7e;
+    --text-color-text-weaker: #343434;
+    --text-color-text-weakest: #282828;
+    --text-destructive-color-text-destructive: #eb5656;
+    --text-destructive-color-text-destructive-strong: #f6b1b1;
+    --text-destructive-color-text-destructive-stronger: #f6b1b1;
+    --text-destructive-color-text-destructive-strongest: #ffffff;
+    --text-destructive-color-text-destructive-weak: #394762;
+    --text-error-color-text-error: #eb5656;
+    --text-error-color-text-error-strong: #f6b1b1;
+    --text-error-color-text-error-stronger: #feecec;
+    --text-error-color-text-error-strongest: #feecec;
+    --text-error-color-text-error-weak: #eb5656;
+    --text-icon-color-text-icon: #ededed;
+    --text-icon-color-text-icon-error: #eb5656;
+    --text-icon-color-text-icon-info: #369eff;
+    --text-icon-color-text-icon-inverse: #8891aa;
+    --text-icon-color-text-icon-success: #36d576;
+    --text-icon-color-text-icon-warning: #ffb37a;
+    --text-icon-color-text-icon-weaker: #707070;
+    --text-info-color-text-info: #369eff;
+    --text-info-color-text-info-strong: #0091ff;
+    --text-inverse-color-text-inverse: #ffffff;
+    --text-inverse-color-text-inverse-weak: #ededed;
+    --text-inverse-color-text-inverse-weaker: #282828;
+    --text-inverse-color-text-inverse-weakest: #161616;
+    --text-link-color-text-link: #008cff;
+    --text-link-color-text-link-strong: #99cdff;
+    --text-link-color-text-link-stronger: #ebf4ff;
+    --text-link-color-text-link-strongest: #ffffff;
+    --text-link-color-text-link-weak: #394762;
+    --text-link-destructive-color-text-link-destructive: #eb5656;
+    --text-link-destructive-color-text-link-destructive-strong: #f6b1b1;
+    --text-link-destructive-color-text-link-destructive-stronger: #f6b1b1;
+    --text-link-destructive-color-text-link-destructive-strongest: #ffffff;
+    --text-link-destructive-color-text-link-destructive-weak: #394762;
+    --text-primary-color-text-primary: #ededed;
+    --text-primary-color-text-primary-strong: #99cdff;
+    --text-primary-color-text-primary-stronger: #99cdff;
+    --text-primary-color-text-primary-strongest: #ffffff;
+    --text-primary-color-text-primary-weak: #394762;
+    --text-success-color-text-success: #30a46c;
+    --text-warning-color-text-warning: #ffb37a;
+    --text-warning-color-text-warning-strong: #fac2a0;
   }
 }
 
