chore: refactor colors

--- a/configurations/styles/global.css
+++ b/configurations/styles/global.css
@@ -286,10 +286,7 @@
 }
 
 @layer base {
-  * {
-    @apply border-border;
-  }
   body {
-    @apply bg-background text-foreground;
+    @apply bg-background;
   }
 }
